test/spec_vectors/elem/ok/module_42.wat
(module (func) (table 1 (ref func) (ref.func 0)) (elem (table 0) (i32.const 0) (ref func) (ref.func 0)))