test/spec_vectors/elem/fail/module_67.wat
(module (table 1 funcref) (elem (offset (nop) (i32.const 0))))